test/expected/declare_cnmf_v.out
declare f as const non-member function
        ^
9: error: non-member functions can not be const
